# pkm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  pkm.cpp  pkm.h
Inc/: database_utils.hpp  package_utils.hpp  pkm.hpp  utils.h  version_utils.hpp
Inc/archive/: FileReader.h  Reader.h  XARArchive.h  archive.h
Inc/pkg/: Installer.h  installer.h
Src/: database_utils.cpp  main-installer.cpp  main.cpp  package_utils.cpp  pkm.cpp  utils.cpp  version_utils.cpp
Src/archive/: FileReader.cpp  XARArchive.cpp  archive.cpp
Src/pkg/: Installer.cpp  installer.cpp
cmake/: FindLibXar.cmake
cpm/: CMakeLists.txt
cpm/Src/: main.cpp
libcpm/: CMakeLists.txt
libcpm/Inc/: common_utils.h  config_json.h  database_utils.hpp  json_parser.h  log.h  package_json.h  package_utils.hpp  pkm.hpp  version_utils.hpp
libcpm/Inc/cmake/: cmakelist_template_p.h  generator.h
libcpm/Inc/json/: config_json.h
libcpm/Src/: json_parser.cpp  package_utils.cpp  pkm.cpp  version_utils.cpp
libcpm/Src/cmake/: generator.cpp
tests/: CMakeLists.txt  test_cmakelists_generate.cpp  test_json_parser.cpp  test_normal_deps.cpp
tests/assets/: PKGConfigs.json  PKGLocks.json
